--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import Card from '../components/Card.astro';
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
-				href="https://docs.astro.build/"
+				href="https://discord.gg/P5fH7CGm9F"
 				title="Documentation"
 				body="Learn how Astro works and explore the official API docs."
 			/>
