--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,8 +41,8 @@ import Card from '../components/Card.astro';
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://discord.gg/P5fH7CGm9F"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
+				title="Discord"
+				body="Trete Hier auf meinen Discord Server drauf."
 			/>
 			<Card
 				href="https://astro.build/integrations/"
