--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -24,12 +24,12 @@ const { href, title, body } = Astro.props;
 		list-style: none;
 		display: flex;
 		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
+		background-color: #219931;
+		background-image: ;
 		background-size: 400%;
-		border-radius: 7px;
+		border-radius: 8px;
 		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
+		transition: margin-right 4s;
 		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
 	}
 	.link-card > a {
@@ -44,11 +44,11 @@ const { href, title, body } = Astro.props;
 	}
 	h2 {
 		margin: 0;
-		font-size: 1.25rem;
+		font-size: 1.95rem;
 		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 	}
 	p {
-		margin-top: 0.5rem;
+		margin-top: 0.9rem;
 		margin-bottom: 0;
 	}
 	.link-card:is(:hover, :focus-within) {
