--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,13 +29,14 @@ const { title } = Astro.props;
 			45deg,
 			rgb(var(--accent)),
 			rgb(var(--accent-light)) 30%,
-			white 60%
+			rgb(255, 255, 255) 60%
 		);
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
+		background: #262629;
 		background-size: 224px;
+		color: #fefefe;
 	}
 	code {
 		font-family:
