--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,8 +4,13 @@ import Card from '../components/Card.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<Card href='https://www.google.de' title='Cooler Link' body="Cooler Text..."/> 
+	<Card href='https://www.google.de' title='Google' body="Cooler Text..."/> 
+	<p>  </p>
+	<Card href='https://www.google.de' title='Discord' body="Cooler Text..."/> 
+	<p>	 </p>
+	<Card href='https://www.google.de' title='Lutz & Grub' body="Cooler Text..."/> 
 	
+
 
 
 
