--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import SwipeButton from '../components/SwipeButton.astro';
+
 ---
 
 <Layout title="Welcome to Astro.">
 	<Card href='https://www.google.de' title='Google' body="Cooler Text..."/> 
 	<p>  </p>
-	<Card href='https://www.google.de' title='Discord' body="Cooler Text..."/> 
+	<Card href='https://discord.gg/XNUSG6WCrr' title='Discord' body="Cooler Text..."/> 
 	<p>	 </p>
-	<Card href='https://www.google.de' title='Lutz & Grub' body="Cooler Text..."/> 
+	<Card href='https://github.com/xAndy25k1/data-dreamers' title='Github' body="Cooler Text..."/> 
 	
 
 
