--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -26,14 +26,14 @@ const { href, title, body } = Astro.props;
 		padding: 1px;
 		background-color: #219931;
 		background-image: ;
-		background-size: 400%;
+		background-size: 10%;
 		border-radius: 8px;
-		background-position: 100%;
-		transition: margin-right 4s;
+		background-position: 10%;
+		transition: ancient-gra 4s;
 		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
 	}
-	.link-card > a {
-		width: 100%;
+	.link-card > a { 
+		width: 100%; 
 		text-decoration: none;
 		line-height: 1.4;
 		padding: calc(1.5rem - 1px);
