--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,15 +2,37 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import SwipeButton from '../components/SwipeButton.astro';
-
+import Glassmorphism from '../components/Glassmorphism.astro';
+import searchbar from '../components/searchbar.astro';
+import page2 from '../pages/page2.astro';
+import Hovereffect from '../components/hovereffect.astro';
+import Profil from '../components/profil.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<Card href='https://www.google.de' title='Google' body="Cooler Text..."/> 
-	<p>  </p>
-	<Card href='https://discord.gg/XNUSG6WCrr' title='Discord' body="Cooler Text..."/> 
-	<p>	 </p>
-	<Card href='https://github.com/xAndy25k1/data-dreamers' title='Github' body="Cooler Text..."/> 
+	
+ 	<section> 
+		
+	</section>
+
+	<section> 
+		<searchbar> </searchbar>
+	</section>
+
+	<section> 
+
+		<Profil> </Profil>
+
+	</section>
+
+
+	<section> 
+		
+		<Glassmorphism> </Glassmorphism>
+
+	</section>
+
+	<search
 	
 
 
