--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,40 +3,28 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import SwipeButton from '../components/SwipeButton.astro';
 import Glassmorphism from '../components/Glassmorphism.astro';
-import searchbar from '../components/searchbar.astro';
-import page2 from '../pages/page2.astro';
+import page2 from './Übermich.astro';
 import Hovereffect from '../components/hovereffect.astro';
 import Profil from '../components/profil.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Startseite">
 	
- 	<section> 
+ 	<section id=""></section>
+
+	<section id=""></section>
 		
-	</section>
+	<section id="profil"><Profil> </Profil></section> 
 
-	<section> 
-		<searchbar> </searchbar>
-	</section>
-
-	<section> 
-
-		<Profil> </Profil>
-
-	</section>
-
-
-	<section> 
-		
+	<section id="glassmorphism">
 		<Glassmorphism> </Glassmorphism>
-
-	</section>
-
-	<search
-	
-
-
-
+	</section> 
 
 </Layout>
+
+<style>
+		
+
+
+</style>
 
