--- a/src/components/profil.astro
+++ b/src/components/profil.astro
@@ -5,22 +5,20 @@
     <div class="container">
       <div class="card">
         <div class="content">
-          <div class="img"><img src="d"></div>
+          <div class="img"><img src="../public/Foto.jpg"></div>
           <div class="cardContent">
-            <h3>Andreas Steinhardt<br><span>Web Developer</span></h3>
+            <h3>Andreas Steinhardt<br><span>Umschulung Fachinformatiker<br><span>Systemintegration</span></h3>
           </div>
         </div>
         <ul class="sci">
-          <li style="--i:1">
-            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-          </li>
-          <li style="--i:2">
-            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-          </li>
-          <li style="--i:3">
-            <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
-          </li>
-      </ul>
+          <a target="_blank" href="https://www.linkedin.com/in/andreas-steinhardt-4687a02b2/" >
+            <li><i class="fa fa-linkedin" style="color: #007bff;"></i></li>            
+          </a>
+          <a target="_blank" href="https://github.com/xAndy25k1" >
+          <li><i class="fa fa-github" style="color: #6cc644;"></i></li>
+          </a>  
+        </ul>
+
       </div>
       
     </div>
@@ -83,7 +81,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  background: color(two);
+  background: color #943636;
 
   /*scrollbar-width: none;
   overflow: hidden;
@@ -104,45 +102,51 @@ body {
     width: 10px;
   }
   &::-webkit-scrollbar-track {
-    background: color(negro);
+    background: color #b10f0f;
   }
   &::-webkit-scrollbar-thumb {
-    background: color(blanco);
+    background: color #b10f0f;
     border-radius: 1px;
   }
 
   .container {
     position: relative;
+    left: 40%;
+    top: 9%;
     z-index: 1;
     @include displayFlex(center, center, row);
     flex-wrap: wrap;
     padding: 1em;
     
     .card {
-      position: relative;
+      position: relative; /* Position Karte */
+      top: 12vh;
       width: 300px;
       height: 400px;
       margin: 1em;
-      background: rgba(255,255,255,0.05);
-      box-shadow: 0 15px 35px rgba(0,0,0,.2);
-      border-radius: 15px;
+      background: rgba(44, 53, 49, 1);
+      box-shadow: 0 4px 30px rgb(192, 9, 9);
+      backdrop-filter: blur(4px);
+      border-radius: 30px;
       @include displayFlex(center, center, column);
       backdrop-filter: blur(40px);
-      
-      border: solid 2px transparent;
+      z-index: 9;
       background-clip: padding-box;
-      box-shadow: 0px 10px 10px rgba(46, 54, 68, 0.03);
+      box-shadow: 0 0 5px #FFCB9A, 0 0 15px #FFCB9A, 0 0 30px #FFCB9A,
+		  0 0 60px #FFCB9A;
       
       .content {
         position: relative;
         @include displayFlex(center, center, column);
-        opacity: 0.5;
+        opacity: 1.5;
         transition: 0.5s;
         
         .img {
           position: relative;
+          top: 2vh;
+          left: 7.5vh;
           width: 150px; height: 150px;
-          border-radius: 50%;
+          border-radius: 20%;
           overflow: hidden;
           border: 10px solid rgba(0,0,0,.25);
 
@@ -154,15 +158,15 @@ body {
           }
         }
         
-        .cardContent {
+        .cardContent {    /*--- Schriftfarbe---*/
           h3 {
-            color: #fff;
+            color: #D1E8E2;
             text-transform: uppercase;
             letter-spacing: 2px;
             font-weight: 500;
             font-size: 18px;
             text-align: center;
-            margin: 20px 0 10px;
+            margin: 26px 0 10px;
             line-height: 1.1em;
             
             
@@ -176,19 +180,23 @@ body {
       }
       
       .sci {
-        position: absolute;
-        bottom: 50px;
-        @include displayFlex(center, center, row);
+        display:flex;
+        flex direction:row;
+        justify-content: center;
+        align-items: center;
+        bottom: 500px;
+        
         
         li {
           margin: 0 10px;
-          transform: translateY(40px);
+          transform: translateX(40px);
           opacity: 0;
           transition: 0.5s;
           transition-delay: calc(0.1s * var(--i));
+          scale: 10px;
 
           a {
-            font-size: 24px;
+            font-size: 29px;
           }
         }
       }
