--- a/src/components/Glassmorphism.astro
+++ b/src/components/Glassmorphism.astro
@@ -26,12 +26,12 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  margin: 0 auto;
   justify-content: center;
   align-items: center;
   position: relative;
   overflow: auto;
   left: 0; /* Zentrieren der Buttons */
+  top: 100px;
   scrollbar-width: 200;
      &::-webkit-scrollbar {
         width: 0;
@@ -45,7 +45,7 @@ z-index: 5;
   position: relative;
   width: 250px;
   height: 50px;
-  margin: 2rem;
+  margin: 1.5rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -78,6 +78,7 @@ z-index: 5;
   width: 200px;
   height: 50px;
   display: flex;
+
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
