--- a/src/components/profil.astro
+++ b/src/components/profil.astro
@@ -143,14 +143,14 @@
       z-index: 1;
       @include displayFlex(center, center, row);
       flex-wrap: wrap;
-      padding: 6rem;
+      padding: 3rem;
 
 
       .card {
         position: relative; /* Position Karte */
         width: 300px;
         height: 400px;
-        margin: 0 auto;
+        margin: auto;
         background: rgba(44, 53, 49, 1);
         box-shadow: 0 4px 30px rgb(192, 9, 9);
         backdrop-filter: blur(4px);
@@ -172,7 +172,7 @@
           .img {
             position: relative;
             top: 2vh;
-            left: 7.5vh;
+            margin: auto;
             width: 150px; height: 150px;
             border-radius: 20%;
             overflow: hidden;
