--- a/src/pages/Timeline.astro
+++ b/src/pages/Timeline.astro
@@ -43,11 +43,10 @@ import Layout from '../layouts/Layout.astro';
 
 .buttons
 {
-    position: absolute;
-    top: 45vh;
-    left: 55vh;
+    position: relative;
+    margin: auto;
+    top: 60vh;
     z-index: -5;
-	height: 0px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
