--- a/src/components/profil.astro
+++ b/src/components/profil.astro
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="card">
       <div class="content">
-        <div class="img"><img src="../public/Foto.jpg"></div>
+        <div class="img"><img src="https://media.licdn.com/dms/image/D4E03AQGyxwy3SUm75w/profile-displayphoto-shrink_800_800/0/1713004556458?e=1721865600&v=beta&t=Gu0IO5CKpTSx2aoS8xn1p_jTHYI_XjmNqW0641ZUHJY"></div>
         <div class="cardContent">
           <h3>Andreas Steinhardt<br><span>Umschulung Fachinformatiker<br><span>Systemintegration</span></h3>
         </div>
