--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -180,7 +180,7 @@
 
 			<div style="display: flex; justify-content: bottom; align-items: bottom; margin-top: 20px;;">
 
-				<a href="https://www.linkedin.com/" target="_blank">
+				<a href="https://www.linkedin.com/in/andreas-steinhardt-4687a02b2/" target="_blank">
 
 					<div class="icon-box">
 
@@ -190,7 +190,7 @@
 
 				</a>
 
-				<a href="https://github.com/" target="_blank">
+				<a href="https://github.com/xAndy25k1" target="_blank">
 
 					<div class="icon-box">
 
